--- a/classify.ipynb
+++ b/classify.ipynb
@@ -336,32 +336,32 @@
      "text": [
       "  0%|          | 0/2 [00:00<?, ?it/s]c:\\Users\\Hasee\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\transformers\\models\\wavlm\\modeling_wavlm.py:1755: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
       "  return (input_length - kernel_size) // stride + 1\n",
-      "100%|██████████| 2/2 [00:03<00:00,  1.54s/it]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  3.34it/s]\n",
-      "  0%|          | 0/1000 [00:00<?, ?it/s]C:\\Users\\Hasee\\AppData\\Local\\Temp\\ipykernel_6724\\929340445.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "100%|██████████| 2/2 [00:02<00:00,  1.39s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  3.33it/s]\n",
+      "  0%|          | 0/1000 [00:00<?, ?it/s]C:\\Users\\Hasee\\AppData\\Local\\Temp\\ipykernel_8800\\929340445.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  x=self.softmax(x)\n",
-      "  7%|▋         | 74/1000 [00:00<00:01, 740.00it/s]"
+      "  7%|▋         | 67/1000 [00:00<00:01, 669.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stride=0 epoch=0 loss=0.26160338521003723\n"
+      "stride=0 epoch=0 loss=0.2790892720222473\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 784.75it/s]"
+      "100%|██████████| 1000/1000 [00:01<00:00, 810.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stride=0 epoch=999 loss=0.07544083148241043\n"
+      "stride=0 epoch=999 loss=0.06445500999689102\n"
      ]
     },
     {
@@ -447,289 +447,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Hasee\\AppData\\Local\\Temp\\ipykernel_6724\\929340445.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  x=self.softmax(x)\n",
-      "  4%|▍         | 40/1000 [00:00<00:02, 393.39it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=0 epoch=0 loss=0.23380403220653534\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 674.07it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=0 epoch=999 loss=0.134284108877182\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  9%|▊         | 86/1000 [00:00<00:02, 423.89it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=1 epoch=0 loss=0.14359751343727112\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 694.83it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=1 epoch=999 loss=0.12352902442216873\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 41/1000 [00:00<00:02, 402.17it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=2 epoch=0 loss=0.16752198338508606\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 684.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=2 epoch=999 loss=0.1288624107837677\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 39/1000 [00:00<00:02, 387.39it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=3 epoch=0 loss=0.20617403090000153\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 659.36it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=3 epoch=999 loss=0.17920614778995514\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|▉         | 96/1000 [00:00<00:01, 494.61it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=4 epoch=0 loss=0.1851024180650711\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 704.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=4 epoch=999 loss=0.14642027020454407\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 39/1000 [00:00<00:02, 388.19it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=5 epoch=0 loss=0.1543152779340744\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 659.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=5 epoch=999 loss=0.13047978281974792\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 77/1000 [00:00<00:02, 383.16it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=6 epoch=0 loss=0.1334661841392517\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 657.19it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=6 epoch=999 loss=0.1220487579703331\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▎         | 37/1000 [00:00<00:02, 362.88it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=7 epoch=0 loss=0.12525470554828644\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 627.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=7 epoch=999 loss=0.09601004421710968\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▎         | 37/1000 [00:00<00:02, 360.44it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=8 epoch=0 loss=0.10260505229234695\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 610.96it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=8 epoch=999 loss=0.09944672137498856\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  3%|▎         | 34/1000 [00:00<00:02, 330.27it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=9 epoch=0 loss=0.10856372117996216\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 644.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stride=9 epoch=999 loss=0.10530161112546921\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "C:\\Users\\Hasee\\AppData\\Local\\Temp\\ipykernel_8800\\929340445.py:13: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  x=self.softmax(x)\n"
      ]
     }
    ],
@@ -840,7 +559,7 @@
     "    wav=ele['wav']\n",
     "    text=ele['sentence']\n",
     "    shutil.copy(wav,'result/audios/{0}.wav'.format(i))\n",
-    "    f_list.write(str(j)+':'+text)\n",
+    "    f_list.write(str(i)+':'+text)\n",
     "f_list.close()"
    ]
   }
