--- a/STT.ipynb
+++ b/STT.ipynb
@@ -26,7 +26,8 @@
     "    min_len=0.5\n",
     "    max_len=10.5\n",
     "    period=60\n",
-    "    RATE=16000"
+    "    RATE=16000\n",
+    "    language='Japanese'"
    ]
   },
   {
@@ -176,7 +177,7 @@
     "    ptr+=CFG.period*sample_rate\n",
     "    save_pth=CFG.tmp_folder+'/{}.wav'.format(i+1)\n",
     "    torchaudio.save(save_pth.format(psum),data.view(1,-1),sample_rate)\n",
-    "    result = model.transcribe(save_pth,language='Japanese',print_unstab=False)\n",
+    "    result = model.transcribe(save_pth,language=CFG.language,print_unstab=False)\n",
     "    f = open(CFG.tmp_folder+'/{}.pkl'.format(i+1),'wb')\n",
     "    data= pickle.dump(result,f,-1)\n",
     "    f.close()\n",
